Migrated from netbeans to intellij